--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@lkahung/web-analytics",
-  "version": "0.3.7",
+  "version": "0.4.11",
   "description": "Lightweight web analytics SDK for tracking website usage",
-  "main": "analytics.js",
+  "main": "index.js",
+  "module": "index.js",
   "types": "analytics.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
