--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
     "prepare": "npm run build",
-    "build": "echo \"No build required\""
+    "build": "echo \"No build required\"",
+    "test-server": "node test-server.js",
+    "test-server:open": "node test-server.js --open"
   },
   "keywords": [
     "analytics",
@@ -35,6 +37,8 @@
   "devDependencies": {
     "rollup": "^4.9.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-commonjs": "^25.0.7"
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "express": "^4.18.2",
+    "open": "^8.4.0"
   }
 }
